# xampler

./: .gitignore  LESSONS_LEARNED.md  README.md  TODO.md  pyproject.toml  pyright.examples.json
agents-26-sdk/: README.md  pyproject.toml  wrangler.jsonc
ai-05-langchain/: README.md  package.json  pyproject.toml  wrangler.jsonc
ai-gateway-20-universal/: package.json  pyproject.toml  wrangler.jsonc
assets-06-static-assets/: README.md  package.json  pyproject.toml  wrangler.jsonc
browser-rendering-18-screenshot/: package.json  pyproject.toml  wrangler.jsonc
d1-04-query/: db_init.sql  package.json  pyproject.toml  wrangler.jsonc
docs/: 01-r2-pythonic-assessment.md  api-surface-review.md  aws-s3-comparison.md  cloudflare-best-practices-alignment.md  cloudflare-primitives-pythonic-scores.md  composite-example-backlog.md  dataset-reuse-coverage.md  datasets.md  example-rubric-scores.md  examples-status-and-pythonicness.md  executable-examples.md  index.md  internal-consistency-audit.md  lessons-learned.md  native-python-workers-comparison.md  primitive-test-realism.md  primitives-api-surface.md  project-structure-and-naming.md  python-workers-runtime-guidance.md  pythonic-rubric.md  pythonic-tooling.md  r2-feature-coverage.md  s3-python-library-research.md  streaming-api.md  tier-1-completion-plan.md  top-10-improvement-plan.md  unified-api-surface.md
durable-objects-07-counter/: package.json  pyproject.toml  wrangler.jsonc
durable-objects-15-chatroom/: README.md  package.json  pyproject.toml  wrangler.jsonc
email-workers-19-router/: package.json  pyproject.toml  wrangler.jsonc
examples/storage-data/r2-object-storage/: README.md  package.json  pyproject.toml  wrangler.jsonc
examples/storage-data/r2-object-storage/src/: entry.py  r2_pythonic.py
fastapi-03-framework/: package.json  pyproject.toml  wrangler.jsonc
htmlrewriter-11-opengraph/: README.md  package.json  pyproject.toml  wrangler.jsonc
hvsc-24-ai-data-search/: README.md  db_init.sql  package.json  pyproject.toml  wrangler.jsonc
hyperdrive-25-postgres/: README.md  pyproject.toml  wrangler.jsonc
images-12-generation/: README.md  package.json  pyproject.toml  wrangler.jsonc
kv-02-binding/: package.json  pyproject.toml  wrangler.jsonc
pages-23-functions/: package.json  pyproject.toml  wrangler.jsonc
queues-16-producer-consumer/: package.json  pyproject.toml  wrangler.jsonc
r2-01/: README.md  package.json  pyproject.toml  wrangler.jsonc
r2-data-catalog-22-iceberg/: package.json  pyproject.toml  wrangler.jsonc
r2-sql-21-query/: README.md  package.json  pyproject.toml  wrangler.jsonc
scheduled-08-cron/: README.md  package.json  pyproject.toml  wrangler.jsonc
scripts/: serve_hvsc.py  (+12 more)
(+336 files in other folders)
