[project]
name = "xampler"
version = "0.1.0"
description = "Python Workers examples using cfboundary"
requires-python = ">=3.12"
dependencies = [
    "cfboundary @ git+https://github.com/adewale/cfboundary@v0.1.11",
]

[dependency-groups]
dev = [
    "py7zr>=1.1.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pyright>=1.1.390",
    "ruff>=0.8",
]

[tool.ruff]
exclude = ["**/python_modules/**", "**/.venv-workers/**"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["xampler"]
exclude = ["**/.venv", "**/.venv-workers", "**/python_modules"]
stubPath = "typings"
pythonVersion = "3.13"
typeCheckingMode = "strict"
