[project]
name = "xampler-storage-data-r2-object-storage"
version = "0.1.0"
description = "R2 from Python Workers using cfboundary"
requires-python = ">=3.12"
dependencies = [
    "cfboundary @ git+https://github.com/adewale/cfboundary@v0.1.11",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
